# ptag

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: check_version.py  ci.yml
docs/: references.md
docs/stylesheets/: extra.css
ptag/: __init__.py  elements.py  gen_elements.py  tag.py
tests/: test_elements.py  test_tag.py
