[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ptag"
version = "0.2.2"
description = "pythonic way to create HTML/XML/SVG tags"
authors = ["Kelvin Ng <hoishing@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/hoishing/ptag"
keywords = ["template", "html", "xml", "svg", "tag"]
classifiers = [
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Intended Audience :: Developers",
  "Development Status :: 4 - Beta",
]
packages = [{ include = "ptag", from = "." }]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "*"
toml = "*"
requests = "*"
